<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewReservation"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/textViewReservation"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/number"
                android:inputType="number" />

            <EditText
                android:id="@+id/sizeOfGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sizeOfGroup"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewSmoking"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/radioButtonSmoking"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radioButtonNonSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/radioButtonNonSmoking"
                        android:textSize="16sp" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDate"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewTime"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:calendarViewShown="false"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonConfirm" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonReset" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
